# artefact

./: .gitignore  README.rst  pyproject.toml
src/artefact/: __init__.py  core.py  http.py  types.py  utils.py
